# compose-x-render

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test.yaml  tox.ini
.github/: ISSUE_TEMPLATE.md
compose_x_render/: __init__.py  cli.py  compose_x_render.py  consts.py  envsubst.py  list_management.py  networking.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  extension_input.yaml  invalid_extension.yaml  invalid_input.yaml  invalid_port_format.yaml  test_compose_x_render.py  valid_input.yaml
