[tool.poetry]
name = "compose_x_render"
version = "0.9.0"
description = "Library & Tool to compile/merge compose files with top level extension fields"
authors = ["John Preston <john@compose-x.io>"]
license = "MPL-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["compose-x", "aws", "jsonschema", "docker", "compose-spec"]
include = [
    "MANIFEST.in",
    "LICENSE",
    "compose_x_render/compose-spec.json"
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = ">=5,<7.0"
argparse = "^1.4.0"
compose-x-common = "^1.2"
jsonschema = ">=4.15,<4.18"
importlib-resources = "^6.1"

[tool.poetry.extras]
aws = ["boto3"]

[tool.poetry.dev-dependencies]
sphinx-material = "^0.0.35"
isort = "^5.10"
black = "^23.3"
Sphinx = "^4.4.0"
tbump = "^6.7.0"
pre-commit = "^3.3"
behave = "^1.2.6"
coverage = "^7.2"
pytest = "^7.4"
twine = "^4.0"
pyupgrade = "^3.8"

[tool.poetry.scripts]
compose-x-render = "compose_x_render.cli:main"
ecs-compose-x-render = "compose_x_render.cli:main"

[tool.tbump]
github_url = "https://github.com/compose-x/compose_x_render"

[tool.tbump.version]
current = "0.9.0"

regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?:[-.](?P<rc>[\S]+))?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"

[[tool.tbump.file]]
src = "compose_x_render/__init__.py"

[[tool.tbump.before_commit]]
name = "Files format"
cmd = "make conform"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = "kelvin"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["compose_x_render"]
omit = ["compose_x_render/cli.py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
